lib/tests/compile-fail/nonzero_fail_1.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/nonzero_fail_1.rs:5:24
  |
5 | #[derive(EnumMetadata, NonZeroRepr)]
  |                        ^^^^^^^^^^^
  |
  = help: message: assertion failed: discriminant != 0
